--- a/README
+++ b/README
@@ -3,7 +3,7 @@ WEISS
    Deveolped by Dmytro Nechepurenko. Distributed by GNU GPL v.2.
    Based on work André Griffin (http://andregriffin.com).
    Some parts are based on works Stefan Nitzsche, Tyler Tate, Yahoo UI, 
-   HTML5 Booletprait, Twitter Bootstrap and others.
+   HTML5 Boilerplate, Twitter Bootstrap, Zen and others.
 
 Weiss is HTML5-CSS3 blank canvas sass framework with media query and grid system for fast start and easy development.
 Based on Drupal theme Framework (http://drupal.org/project/framework) with some useful improvements.
